--- a/Semantix_Diabetes.ipynb
+++ b/Semantix_Diabetes.ipynb
@@ -759,7 +759,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df = pd.read_csv('/content/diabetes_prediction_dataset.csv')"
+        "df = pd.read_csv('https://raw.githubusercontent.com/Erik-Henrique/Analise_Diabetes_Semantix/refs/heads/main/diabetes_prediction_dataset.csv')"
       ],
       "metadata": {
         "id": "qmJbQd0Z00Sp"
